# xycli

./: .gitignore  Cargo.toml  DEVELOPMENT_REPORT.md  README.md  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
crates/xycli-cli/: Cargo.toml
crates/xycli-cli/src/: doctor.rs  main.rs
crates/xycli-cli/tests/: cli.rs
crates/xycli-core/: Cargo.toml
crates/xycli-core/src/: agent.rs  config.rs  credentials.rs  error.rs  lib.rs  permission.rs  prompt.rs  provider.rs  session.rs
crates/xycli-core/src/provider/: anthropic.rs  deepseek.rs  factory.rs  mod.rs
crates/xycli-core/src/tools/: file_read.rs  file_write.rs  mod.rs  path_policy.rs  terminal_exec.rs
crates/xycli-core/tests/: provider_http.rs  tool_security.rs
docs/: ARCHITECTURE.md  DESIGN.md  NEXT_PHASE_DESIGN.md  PERMISSION_GUARD_DESIGN.md  PRD.md  REMEDIATION_PLAN.md  RUST_MIGRATION.md  TASKS.md
scripts/: clean-dist.mjs  finalize-build.mjs  run-cargo.mjs
src/: cli.ts
src/core/: agent-loop.test.ts  agent-loop.ts  errors.ts  permission-guard.test.ts  permission-guard.ts  prompts.ts  types.ts
src/providers/: anthropic.test.ts  anthropic.ts  deepseek.test.ts  deepseek.ts  index.ts  types.ts
src/session/: json-store.test.ts  json-store.ts  types.ts
src/tools/: builtins.ts  file-read.ts  file-write.ts  path-policy.ts  registry.ts  terminal-exec.ts  tools.test.ts  types.ts
test/e2e/: cli-process.test.ts  m1-cli.test.ts
test/fixtures/: mock-anthropic.ts  mock-fetch.mjs
