[package]
name = "xycli-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "XYCLI 的 Rust 核心运行时"

[dependencies]
async-trait.workspace = true
chrono.workspace = true
hex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
